Refactor Add/Replace/Update to use a generic set(String, Object). Reviewed-by: vanaltj Review-thread: http://icedtea.classpath.org/pipermail/thermostat/2013-October/008360.html PR1569